Video and text box overlap fixed
Video and text box overlap fixed

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,16 @@ body {
     text-align: center;
 }
 
+#videoCat {
+    display: block; 
+    margin: 0 auto;
+}
+
+#videoDog {
+    display: block; 
+    margin: 0 auto;
+}
+
 .kitty-page-bg {
     background-image: url('cat.jpg');
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */  filter: grayscale(100%);
@@ -107,6 +117,16 @@ body {
     
         #info, #info2 {
         font-size: 1rem;
+        }
+
+        #videoCat {
+            display: block; 
+            margin: 0 auto;
+        }
+
+        #videoDog {
+            display: block; 
+            margin: 0 auto;
         }
 
         .enquiryForm {
